Bug 255299 - Fix availability version on JSRemoteInspector*InspectionFollowsInternalPolicies
Summary: Fix availability version on JSRemoteInspector*InspectionFollowsInternalPolicies
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Elliott Williams
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-11 12:55 PDT by Elliott Williams
Modified: 2023-04-11 15:11 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elliott Williams 2023-04-11 12:55:53 PDT
These declarations are available on macOS 13.3 / iOS 16.4 but are still TBA'd.
Comment 1 Elliott Williams 2023-04-11 12:58:18 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12621
Comment 2 EWS 2023-04-11 15:10:23 PDT
Committed 262842@main (5638cd7601d8): <https://commits.webkit.org/262842@main>

Reviewed commits have been landed. Closing PR #12621 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-04-11 15:11:19 PDT
<rdar://problem/107904978>