Fix availability version on JSRemoteInspector*InspectionFollowsInternalPolicies https://bugs.webkit.org/show_bug.cgi?id=255299

Reviewed by Patrick Angle.

These SPI declarations have been available since macOS 13.3 / iOS 16.4,
but were not updated in https://commits.webkit.org/260895@main.

* Source/JavaScriptCore/API/JSRemoteInspector.h:

Canonical link: https://commits.webkit.org/262842@main